test-suite/tests/roundtrip/invalid/semantic/typecheck/int_in_bool_list/02/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/int_in_bool_list/02/input.essence:2:19:
  |
2 | such that b = and([1, 3])
  |                   ^^^^^^
Type error:
	Expected: "Collection of boolean"
	Got: matrix indexed by [int] of int

